--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -226,8 +226,9 @@ jobs:
     - name: Upload binaries and publish
       env:
         FBUSER: ${{ secrets.FBUSER }}
+        FBIP: ${{ secrets.FBIP }}
       run: |
         echo "put fb-upload.tar.gz">~/a
-        sftp -i ~/fbkey -b ~/a $FBUSER@storage.fastbuilder.pro
-        ssh -i ~/fbkey $FBUSER@storage.fastbuilder.pro "mkdir -p fbbinaries;mv fb-upload.tar.gz fbbinaries/;cd fbbinaries;tar -xzf *.tar.gz;rm *.tar.gz;mv build/* ./;rmdir build;rm -rf /var/www/storage/*;mv * /var/www/storage/;cd ..;rmdir fbbinaries"
+        sftp -i ~/fbkey -b ~/a $FBUSER@$FBIP
+        ssh -i ~/fbkey $FBUSER@$FBIP "mkdir -p fbbinaries;mv fb-upload.tar.gz fbbinaries/;cd fbbinaries;tar -xzf *.tar.gz;rm *.tar.gz;mv build/* ./;rmdir build;rm -rf /var/www/storage/*;mv * /var/www/storage/;cd ..;rmdir fbbinaries"
 
