--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -220,7 +220,7 @@ jobs:
         mv build ../build/gui
         cd ..
         
-    - name: Pack binaries
+    - name: Archive binaries
       run: |
         mv release/*.deb build/
         ls -lh build/>release.txt
@@ -228,23 +228,20 @@ jobs:
         cp version build/version.txt
         cp install.sh build/install.sh
         tar -czf fb-upload.tar.gz build
-        zip -r -9 fb-upload.zip build
         
-    - name: Set release version
+    - name: Provide release version
       id: release_version
       run: echo "release_version=$(cat build/version)"  >> $GITHUB_OUTPUT
 
-    - name: GH Release
+    - name: Release
       uses: softprops/action-gh-release@v0.1.14
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         tag_name: v${{ steps.release_version.outputs.release_version }}
         files: |
-          fb-upload.zip
           fb-upload.tar.gz
           build/*
-          build/gui/*
 
     #- name: Generate index files for storage over github
     #  run: node index_generator.js build
