--- a/omega/mainframe/default_components.json
+++ b/omega/mainframe/default_components.json
@@ -1207,7 +1207,7 @@
     "名称": "兑换码",
     "描述": "允许玩家兑换兑换码对应的指令",
     "是否禁用": true,
-    "版本": "0.0.1",
+    "版本": "0.0.2",
     "来源": "Built-In",
     "配置": {
       "触发词": [
@@ -1217,16 +1217,20 @@
       "菜单提示": "兑换物资",
       "兑换码无效时提示": "兑换码无效",
       "不可重复兑换时提示": "你已经领取过了，不能重复领取",
+      "不可同设备重复兑换时提示": "当前设备已经领取过了，不能重复领取",
       "领取次数到达上限时提示": "该物资已被领完",
       "兑换码领取记录文件": "兑换码领取记录.json",
+      "要求输入兑换码时提示": "请输入兑换码",
       "兑换码": {
         "新手物资": {
           "可领取次数": 0,
           "可重复领取": false,
           "指令": [
             "give [player] stone 1",
-            "give [player] grass 1"
-          ]
+            "give [player] grass 1",
+            "tell [player] 当前设备不能再领取新手礼包了哦"
+          ],
+          "是否检查设备ID": true
         },
         "0001": {
           "可领取次数": 0,
@@ -1234,7 +1238,8 @@
           "指令": [
             "tell [player] 这个神秘代码可以帮你退出游戏",
             "kick [player] 这个神秘代码可以帮你退出游戏，你是第[current]个领取的"
-          ]
+          ],
+          "是否检查设备ID": false
         },
         "lovefrom240": {
           "可领取次数": 3,
@@ -1242,7 +1247,8 @@
           "指令": [
             "give [player] glass",
             "tell [player] 240的爱是有限的，已领取 [current]/[total] 还剩 [res]"
-          ]
+          ],
+          "是否检查设备ID": false
         },
         "lovefrom2401": {
           "可领取次数": 0,
@@ -1250,7 +1256,8 @@
           "指令": [
             "give [player] stained_glass",
             "tell [player] 2401的爱是无限的，已领取 [current]/[total] 还剩 [res]"
-          ]
+          ],
+          "是否检查设备ID": false
         }
       }
     }
