--- a/omega/mainframe/default_components.json
+++ b/omega/mainframe/default_components.json
@@ -1963,8 +1963,8 @@
           "计分板名不在允许范围内的提示词": "§c该计分板不允许互通哦",
           "允许互通的计分板及计分板提示词": {
             "示例_money": {
-              "服务端分数记录为负仍然允许上传分数": false,
-              "符合条件才可以上传":         "@a[scores={示例_money=-999999..},tag=!ban]",
+              "云端分数记录为负仍然允许上传分数": false,
+              "符合条件才可以上传":         "@a[tag=!ban,scores={示例_money=0..}]",
               "成功存入分数提示":          "§a成功存入了[count]积分， 余额为[left]积分",
               "成功提取分数提示":          "§a成功提取了[count]积分， 余额为[left]积分",
               "在租赁服计分板不存在或分数不足":   "§c你的积分不足哦， 或者你在这个计分板上没有分数，无法上传",
@@ -1973,7 +1973,7 @@
               "不符合分数上传条件":         "被ban的玩家不能上传哦"
             },
             "示例二_super": {
-              "服务端分数记录为负仍然允许上传分数": false,
+              "云端分数记录为负仍然允许上传分数": false,
               "符合条件才可以上传":         "@a[tag=amazing_tag]",
               "成功存入分数提示":          "§a成功捉走了[count]只super， 你还可以再抓[left]只喔",
               "成功提取分数提示":          "§a成功丢入了[count]只super， 你还可以再抓[left]只喔",
@@ -1985,7 +1985,7 @@
           },
           "自定义API数据和事件名": {
             "示例": {
-              "说明": "触发方法：在地上放置一个命令方块，输入：/tellraw <机器人名字> {'rawtext':[{'text':'example'},{'text':'hello'},{'selector':'@p'},{'score':{'name':'@p','objective':'雪球菜单'}}]}并激活 (记得把单引号全部改成双引号)",
+              "说明": "你可以在Omega群找到教程",
               "收到相同API事件后执行的指令": [
                 "/say 我接收到了一条示例API事件：",
                 "/say 值1是： [APIData1]， 显示的内容应当是： hello，",
@@ -1996,7 +1996,7 @@
               "测试模式(将这个消api息转发出去的同时也转发到自己服)": true
             },
             "跨服大喇叭": {
-              "说明": "触发方法：在地上放置一个命令方块，输入：/tellraw <机器人名字> {'rawtext':[{'text':'广播'},{'selector':'@p'},{'text':'这是广播内容'},{'score':{'name':'@p','objective':'雪球菜单'}}]}并激活 (记得把单引号全部改成双引号)",
+              "说明": "你可以在Omega群找到教程",
               "收到相同API事件后执行的指令": [
                 "/tellraw @a {\"rawtext\":[{\"text\":\"§l§a跨服广播 §d[APIData1] §f说： §e[APIData2]\"}]}"
               ],
